--- a/src/main/webapp/template/header.jspf
+++ b/src/main/webapp/template/header.jspf
@@ -6,7 +6,7 @@
   To change this template use File | Settings | File Templates.
 --%>
 <%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<div class="header" > <%--헤더--%>
+<div class="header"> <%--헤더--%>
     <div>
         로고
     </div>
@@ -25,6 +25,7 @@
                 <br>
                 <button onclick="logoutConfirm()">로그아웃</button>
                 <button onclick="location.href=''">밴드 메인</button>
+                <button onclick="location.href='/band-create'">새 밴드 만들기</button>
             </div>
         </c:when>
         <c:otherwise>
@@ -39,7 +40,7 @@
         function logoutConfirm() {
             if (window.confirm("로그아웃 하시겠습니까?")) {
                 window.alert("감사합니다!\n안녕히가십시오")
-                location.href='/log-out';
+                location.href = '/log-out';
             }
         }
     </script>
