--- a/src/main/webapp/template/header.jspf
+++ b/src/main/webapp/template/header.jspf
@@ -24,7 +24,7 @@
                 <button>설정</button>
                 <br>
                 <button onclick="logoutConfirm()">로그아웃</button>
-                <button onclick="location.href=''">밴드 메인</button>
+                <button onclick="location.href='/band-main'">밴드 메인</button>
                 <button onclick="location.href='/band-create'">새 밴드 만들기</button>
             </div>
         </c:when>
