--- a/src/main/webapp/template/header.jspf
+++ b/src/main/webapp/template/header.jspf
@@ -20,7 +20,7 @@
             <div>
                     ${member.id}님
                 <button onclick="location.href=''">내 정보</button>
-                <button>알림</button>
+                <button onclick="location.href='/my/notice'">알림 ${noticeCnt}건</button>
                 <button>설정</button>
                 <br>
                 <button onclick="logoutConfirm()">로그아웃</button>
