html 헤더 부분 알림 개수 보이기 수정, gpt css not-use에 저장

--- a/src/main/webapp/template/header.jspf
+++ b/src/main/webapp/template/header.jspf
@@ -20,7 +20,14 @@
             <div>
                     ${member.id}님
                 <button onclick="location.href=''">내 정보</button>
-                <button onclick="location.href='/my/notice'">알림 ${noticeCnt}건</button>
+                <button class="alarm-bt"
+                        onclick="location.href='/my/notice'">
+                    <c:if test="${noticeCnt !=0}">
+                    <span class="alarm-dot">
+                        ${noticeCnt}
+                    </span></c:if>
+                </button>
+
                 <button>설정</button>
                 <br>
                 <button onclick="logoutConfirm()">로그아웃</button>
